--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.6",
     "@clerk/themes": "^2.1.13",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.4.0",
+    "@liveblocks/node": "^2.4.0",
+    "@liveblocks/react": "^2.4.0",
+    "@liveblocks/react-lexical": "^2.4.0",
+    "@liveblocks/react-ui": "^2.4.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -18,7 +24,9 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "jsm-editor": "^0.0.12",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.414.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "react": "^18",
